fix: Contrast on tab menu items

--- a/client/src/css/app.sass
+++ b/client/src/css/app.sass
@@ -34,7 +34,15 @@
 fieldset
     border: none
 
+.q-tab__label
+    font-weight: 400
+
 .q-item.q-router-link--active,
-.q-item--active
+.q-item--active,
+.q-tab--active
     color: #000
+    font-weight: 500
     background-color: #bbdefb
+
+.q-tab--active .q-tab__label
+  font-weight: 500
